# usfm_parser

./: '  Cargo.toml  README.md
src/: book_identifiers.rs  categories.rs  derive_aliases.rs  lib.rs  main.rs
src/categories/: filters.rs  mod.rs
src/categories/groups/: mod.rs
src/document/: mod.rs
src/document/scripture/: mod.rs
src/ids/: code.rs  mod.rs  slug.rs
src/ids/slug/: chapter.rs  either.rs  mod.rs  verse.rs
src/markers/: mod.rs
src/markers/chapters_verses/: c.rs  ca.rs  cd.rs  cl.rs  cp.rs  mod.rs  v.rs  va.rs  vp.rs
src/markers/cross_references/: mod.rs  rq.rs  x.rs  xdc.rs  xk.rs  xnt.rs  xo.rs  xop.rs  xot.rs  xq.rs  xt.rs  xta.rs
src/markers/footnotes/: f.rs  fdc.rs  fe.rs  fk.rs  fl.rs  fm.rs  fp.rs  fq.rs  fqa.rs  fr.rs  ft.rs  fv.rs  fw.rs  mod.rs
src/markers/identification/: header.rs  id.rs  ide.rs  mod.rs  rem.rs  sts.rs  toc.rs  toca.rs  usfm.rs
src/markers/introductions/: ib.rs  ie.rs  iex.rs  ili.rs  im.rs  imi.rs  imq.rs  imt.rs  imte.rs  io.rs  ior.rs  iot.rs  ip.rs  ipi.rs  ipq.rs  ipr.rs  iq.rs  iqt.rs  is.rs  mod.rs
src/markers/lists/: lf.rs  lh.rs  li.rs  lim.rs  litl.rs  mod.rs
src/markers/markers/: all.rs  any.rs  mod.rs  paired.rs  parameters.rs  parser.rs  simple.rs  tag.rs  weighted.rs
src/markers/paragraphs/: b.rs  cls.rs  m.rs  mi.rs  mod.rs  nb.rs  p.rs  pc.rs  ph.rs  pi.rs  pm.rs  pmc.rs  pmo.rs  pmr.rs  po.rs  pr.rs
src/markers/poetry/: b.rs  mod.rs  q.rs  qa.rs  qac.rs  qc.rs  qd.rs  qm.rs  qr.rs  qs.rs
src/markers/tables/: mod.rs  tc.rs  tcr.rs  th.rs  thr.rs  tr.rs
src/parser/: mod.rs  usj.rs
(+54 files in other folders)
