[package]
name = "usfm-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.10.1"
derive_more = { version = "2.0.1", features = ["full"] }
enum_dispatch = "0.3.13"
macro_rules_attribute = "0.2.2"
strum = { version = "0.27", features = ["derive"] }
from_nested_tuple = { git = "https://github.com/MasterTemple/from_nested_tuple.git" }
